# amplifier-workspace

./: .gitignore  README.md  SUPPORT.md  amplifier-workspace-design.md
amplifier-workspace/: pyproject.toml
amplifier-workspace/docs/plans/: 2026-03-31-phase1-core-infrastructure.md
amplifier-workspace/src/amplifier_workspace/: __main__.py  cli.py  config.py  config_manager.py  doctor.py  git.py  install.py  tmux.py  upgrade.py  wizard.py  workspace.py
amplifier-workspace/src/amplifier_workspace/templates/: AGENTS.md  default-config.toml
amplifier-workspace/tests/: test_cli.py  test_config.py  test_config_manager.py  test_doctor.py  test_git.py  test_install.py  test_tmux.py  test_upgrade.py  test_wizard.py  test_workspace.py
docs/plans/: 2026-03-31-phase2-setup-health-upgrade.md  2026-03-31-phase3-session-manager.md  2026-04-01-upgrade-install-info.md
src/amplifier_workspace/: cli.py  doctor.py  tmux.py  wizard.py  workspace.py
src/amplifier_workspace/templates/: AGENTS.md
tests/: test_cli.py  test_config.py  test_config_manager.py  test_git.py  test_install.py  test_tmux.py
