[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
amplifier-workspace = "amplifier_workspace.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_workspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
